@@ -6,8 +6,8 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
         <exec.mainClass>co.clb.ude.pb.Proyecto_De_Aula.Principal</exec.mainClass>
     </properties>
     <name>Proyecto_De_Aula</name>
@@ -41,6 +41,16 @@
                 <configuration>
                     <mainClass>co.clb.ude.pb.Proyecto_De_Aula.Principal</mainClass>
                     <!-- Otras configuraciones opcionales aquí -->
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
